alignement fix

--- a/modules.less
+++ b/modules.less
@@ -82,7 +82,7 @@ textarea.inline-editing{
 }
 
 nav.vertical{
-	padding-right: 10px;
+	padding-right: 15px;
 	h2{
 		overflow: hidden;
 		white-space: nowrap;
@@ -123,6 +123,19 @@ nav.vertical{
 					margin-top: 2px;
 				}
 
+				i.arrow{
+					float: left;
+				}
+				i.arrow::before{
+					content: ">";
+					font-weight: 900;
+					font-size: 12px;
+					display: block;
+					margin-top: 0px;
+					margin-right: 6px;
+					font-family: Arial;
+				}
+
 				img{
 					vertical-align: middle;
 					margin-right: 5px;
@@ -130,6 +143,14 @@ nav.vertical{
 			}
 			a.selected{
 				background: #ccc;
+			}
+			a.opened{
+				i.arrow::before{
+					content: "v";
+					margin-top: -2px;
+					font-family: Lato;
+					font-size: 13px;
+				}
 			}
 			input{
 				position: relative !important;
@@ -142,7 +163,7 @@ nav.vertical{
 				.border-box;
 				width: 100%;
 			}
-	}
+		}
   }
 }
 
@@ -437,6 +458,7 @@ p{
 		height: 17px;
 		text-align: center;
 		padding-top: 2px;
+		.cell;
 	}
 
 	.current-month-header{
@@ -686,11 +708,11 @@ table{
 		.cell-ellipsis;
 
 	}
-	td.icon, th.user{
+	td.icon, th.icon{
 		width: 25px;
 		height: 25px;
 	}
-	td.content, th.user{
+	td.content, th.content{
 		max-width: 280px;
 		.cell-ellipsis;
 	}
@@ -958,6 +980,7 @@ ul.icons-tabs{
 }
 
 .icons-view{
+	position: relative;
 	padding-left: 0;
 	.element{
 		.cell;
@@ -2007,6 +2030,7 @@ em.high-importance{
 
 body{
 	cursor: default !important;
+	line-height: 20px;
 }
 
 a.cke_smile img {
